tests/compilefail13.out
[1mtests/compilefail13.pas:10:5: [0m[1m[91merror:[0m Identifier undefined 'i'
    10 | 	i:=one(7);